# aml-v2-lstm-ts-forecasting-demo

./: .gitignore  README.md  environment.yml  fast_setup.ps1  fast_setup.sh  pyproject.toml  requirements.in  setup.ps1  setup.sh
configs/: model_config.yaml  pipeline_config.yaml
docker/: Dockerfile  requirements.txt
infra/terraform/: README.md  jumpbox_vm.tf  main.tf
infra/terraform-quickstart/: main.tf  providers.tf
mlops/compute/: setup_compute.py
mlops/environments/: Dockerfile  ml_environment.yml  requirements.txt
mlops/pipelines/: training_pipeline.py
notebooks/: 01_setup_workspace copy.ipynb  01_setup_workspace.ipynb  02_data_exploration.ipynb  03_model_training.ipynb  04_azure_ml_training_tutorial.ipynb
scripts/: fast_setup.ps1  fast_setup.sh
src/: __init__.py
src/azure_ml_training/: README.md  environment.yml  requirements.txt  submit_training_job.py  train_lstm.py  train_lstm_azureml.py
src/data_processing/: __init__.py  preprocessor.py
src/inference/: __init__.py  score.py
src/models/: __init__.py  lstm_model.py  lstm_model_seq2seq.py
src/training/: __init__.py  train_lstm.py
src/utils/: __init__.py  azure_ml_config.py  azure_ml_utils.py
tests/: test_model.py  test_preprocessor.py
typings/joblib/: __init__.pyi  _cloudpickle_wrapper.pyi  _dask.pyi  _memmapping_reducer.pyi  _parallel_backends.pyi  _store_backends.pyi  _utils.pyi  backports.pyi  compressor.pyi  disk.pyi  executor.pyi  func_inspect.pyi  hashing.pyi  logger.pyi  memory.pyi  numpy_pickle.pyi  numpy_pickle_compat.pyi  parallel.pyi  pool.pyi  testing.pyi
